# ctxslim

./: LICENSE  README.md  pyproject.toml
src/ctxslim/: __init__.py  cli.py  hook.py  store.py
src/ctxslim/compress/: __init__.py  jsonlike.py  logs.py  text.py
tests/: conftest.py  test_compress.py  test_hook.py  test_store.py
