[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxslim"
version = "0.1.0"
description = "Safe, deterministic, reversible context compression for Claude Code tool outputs"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
slim = "ctxslim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
